--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -131,11 +131,11 @@ You can find many integrations developed by the community in the [Astro Integrat
 
 Astro's Integration API is inspired by Rollup and Vite, and designed to feel familiar to anyone who has ever written a Rollup or Vite plugin before.
 
-In this example, we'll create a simple integration to get fimiliar with the API.
+This example shows how to create a simple integration to get fimiliar with the API.
 
 ### Project Setup
 
-We'll start by creating a `integration.ts` file under an `lib` directory. This file would hold all of the code for our integration.
+Create a `integration.ts` file under an `lib` directory. This file would hold all of the code for our integration.
 
 <FileTree title="Project Structure">
 - src/
@@ -150,16 +150,16 @@ We'll start by creating a `integration.ts` file under an `lib` directory. This f
 Since we're using TypeScript for our example we'll start out by importing Astro's built in type for integrations.
 
 ```ts title="/src/lib/integration.ts"
-import type { AstroIntegration, AstroConfig } from 'astro';
+import type { AstroIntegration } from 'astro';
 ```
 
 [`AstroIntegration`](/en/reference/integrations-reference/#quick-api-reference) acts as a reference for you to build your own integration.
 
 ### Writing Our Integration
 
-To make our integration work, you would have to export a function that the user can call from their `astro.config,mjs` file.
+To make the integration work, we would have to export a function that the user can call from their `astro.config,mjs` file.
 
-This function returns a `AstroIntegration` type.
+This function returns an `AstroIntegration` type.
 
 ```ts title="/src/lib/integration.ts"
 
@@ -171,9 +171,9 @@ export default function int_test(options: testOptions): AstroIntegration {
 
 ### Using Hooks
 
-Astro comes with a bunch of [hooks](/en/reference/integrations-reference/#hooks) that you can use during the lifecycle of the website. These hooks allow you to fire certain functions when an event starts. Hooks come with a bunch of parameters that you can use in their callback functions.
+Astro comes with a bunch of [hooks](/en/reference/integrations-reference/#hooks) that you can use during the lifecycle of the website. These hooks allow us to fire certain functions when an event starts. Hooks come with a bunch of parameters that can be used in their callback functions.
 
-In your `integration.ts` file, you can call these hooks can run various functions.
+Hooks can be called in the `integration.ts` file to invoke various functions.
 
 ```ts title="/src/lib/integration.ts"
 
@@ -183,15 +183,15 @@ export default function int_test(): AstroIntegration {
     'astro:config:setup': () => {},
     'astro:config:done': () => {},
     'astro:server:setup': () => {}
-    /* You can read about the rest of the hooks at https://docs.astro.build/en/reference/integrations-reference/#hooks  */
+    /* Read about the rest of the hooks at https://docs.astro.build/en/reference/integrations-reference/#hooks  */
   }
 }
 
 
 ```
-`astro:config:setup` runs when the `dev` or `build` server is started. You can use this hook to inject routes, make changes to the config or read data given to us by the user.
+`astro:config:setup` runs when the `dev` or `build` server is started. This hook can be used to inject routes, make changes to the config or make custom user configs.
 
-Let's add a quick and dirty callback function to our first hook.
+Let's add a simple callback function to our first hook.
 
 ```ts title="/src/lib/integration.ts"
 
@@ -205,9 +205,9 @@ hooks: {
 
 `command` returns what command is being run. It can be either `build` or `dev`.
 
-### Running Our Integration
+### Running the Integration
 
-To run your integration, first, you would need to import it on your `astro.config.mjs` file.
+The integration has to be imported to the `astro.config.mjs` file for it to be able to run.
 
 ```js title="astro.config.mjs" {2, 4}
 
@@ -220,7 +220,7 @@ export default defineConfig({
 
 ```
 
-Now, if your run your site using the `dev` command you should see the following on your terminal screen.
+Running `npm run dev` would print the following to the console.
 
 ```
 astro:config:setup> running command: dev
@@ -228,16 +228,16 @@ astro:config:setup> running command: dev
 
 ### Extending The Integration
 
-In order to make your integration really come to life, you might want to add a few features. In the examples below, we walk you through on how to set up user config and injecting routes.
+In order to make your integration really come to life, you might want to add a few features. In the examples below, you can learn how to set up user config and inject routes.
 
 #### User Config
 
-Now that you have a working integration, one thing you might want to do is to add a way for the users to configure various data. For example the config in [TailWind](/en/guides/integrations-guide/tailwind/#configuration) integration.
+You may need the user to configure various data for your integration. For example the config in [TailWind](/en/guides/integrations-guide/tailwind/#configuration) integration.
 
-You can do so by first creating a type.
+To get typesafety in the integration, we can create a type.
 
 :::note
-Creating a type is optional, however recommended so that the users can get IntelliSense for when they use your integration.
+Creating a type is optional, however recommended so that the users can get IntelliSense and typesafety for when they use your integration.
 :::
 
 ```ts title="/src/lib/integration.ts"
@@ -256,7 +256,7 @@ export default function int_test(options: AwesomeType): AstroIntegration { /* Co
 
 ```
 
-Great! Now you can pass a value to our function in our ```astro.config.mjs``` file.
+The function is now typesafe.
 
 ```js title="astro.config.mjs" {6}
 
@@ -271,7 +271,7 @@ export default defineConfig({
 
 ```
 
-At this point in time, you can use the `options` parameter in your hooks.
+The parameter `options` can be referenced anywhere in the hooks of the integration.
 
 ```ts title="/src/lib/integration.ts"
 
@@ -292,9 +292,9 @@ Hello there, Neel!
 
 #### Injecting Routes
 
-As started before, you can inject custom routes to the a user's site. This is particularly useful when you want your integration to have some sort of dashboard.
+As started before, custom routes can be injected to the a user's site. This is particularly useful when to create admin panels or dashboards.
 
-To add inject a route, you would first have to create an `.astro` file in your `lib` directory.
+The route page can be a `.astro` file.
 
 <FileTree title="Project Structure">
 - src/
@@ -313,7 +313,7 @@ To add inject a route, you would first have to create an `.astro` file in your `
 
 Route injections happen in the `astro:config:setup` hook.
 
-In order to inject a route, we'll have to pass the `injectRoute` parameter to our `astro:config:setup` callback function.
+`injectRoute` option is required in order to inject a route.
 
 ```ts title="/src/lib/integration.ts" /injectRoute/
 
@@ -324,8 +324,9 @@ hooks: {
 }
 
 ```
-
-Now, we can use the `injectRoute()` method to inject a route.
+`injectRoute()` contains two parameters:
+- `pattern` - The path of the route
+- `entryPoint` - The `.astro` file that needs to be rendered on the given path
 
 ```ts
 
@@ -345,9 +346,7 @@ hooks: {
 
 ```
 
-The `pattern` property is the route that you need injected and the `entryPoint` property is the path to your `.astro` file that you want to render.
-
-Now, if you restart the server and try to visit the `/injected` path you shoud see your `.astro` file rendered!
+Restarting the server and visiting `/injected` path would render the contents of the `.astro` file.
 
 ### Going Forward
 
@@ -355,5 +354,4 @@ Check out the [Integration API](/en/reference/integrations-reference/) reference
 
 ### Publishing to npm
 
-If you would like to publish your integration to NPM, you can check out [our guide](/en/reference/publish-to-npm/) on the topic.
-
+To publish your integration to NPM, you can check out [our guide](/en/reference/publish-to-npm/) on the topic.
