--- a/src/pages/en/guides/cms/keystonejs.mdx
+++ b/src/pages/en/guides/cms/keystonejs.mdx
@@ -6,4 +6,4 @@ stub: true
 service: KeystoneJS
 ---
 
-[KeystoneJS](https://keystonejs.com/) helps you build faster and scale further than any other CMS or App Framework. Just describe your schema, and get a powerful GraphQL API & beautiful Management UI for content and data.
+[KeystoneJS](https://keystonejs.com/) is an open source, headless content-management system that allows you to describe the structure of your schema.
