--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -123,9 +123,11 @@ This is because these features modify the [Response headers](https://developer.m
 
 ### `Astro.cookies`
 
-On the `Astro` global, this interface allows to manipulate cookies. It allows to directly get them from requests and set them in responses. Whereas `Astro.request.headers.get('cookie')` gets all cookies and still need to be parsed, `Astro.cookies.get` gets a single cookie in an object.
+This is a utility to read and modify a single cookie. It allows you to check, set, get and delete a cookie.
 
-More details about the API in the reference [Astro.cookies](/en/reference/api-reference/#astrocookies)
+Use `Astro.request.headers.get('cookie')` to get all cookies at once.
+
+See more details about [`Astro.cookies` and the `AstroCookie` type](/en/reference/api-reference/#astrocookies) in the API reference.
 
 The example below shows how to update the value of a counter cookie.
 
