--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -129,7 +129,7 @@ Use `Astro.request.headers.get('cookie')` to get all cookies at once.
 
 See more details about [`Astro.cookies` and the `AstroCookie` type](/en/reference/api-reference/#astrocookies) in the API reference.
 
-The example below shows how to update the value of a counter cookie.
+The example below updates the value of a cookie that updates a page view counter.
 
 ```astro title="src/pages/index.astro" {4,10}
 ---
