added .has API usage

--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -131,13 +131,12 @@ See more details about [`Astro.cookies` and the `AstroCookie` type](/en/referenc
 
 The example below updates the value of a cookie that updates a page view counter.
 
-```astro title="src/pages/index.astro" {4,10}
+```astro title="src/pages/index.astro" {4,5,9}
 ---
 let counter = 0
 
-const cookie = Astro.cookies.get("counter")
-
-if(cookie.value != undefined){
+if(Astro.cookies.has("counter")){
+  const cookie = Astro.cookies.get("counter")
 	counter = parseInt(cookie.value) + 1
 }
 
