use same intro as other guides

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -12,7 +12,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 [Ghost](https://github.com/TryGhost/Ghost) is an open-source, headless content management system built on Node.js.
 
 ## Integrating with Astro
-Ghost comes with a [content API](https://ghost.org/docs/content-api/) that would allow us to build our site with Astro. In this example, we assume that you already have a site set up with Ghost that you would like to port to Astro.
+In this section, we’ll use the [Ghost content API](https://ghost.org/docs/content-api/) to bring your data into your Astro project.
 
 ### Prerequisites
 To get started you will need to have the following: 
