--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -19,7 +19,7 @@ To get started you will need to have the following:
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
 
-2. **A Ghost site** - It is assumed that you have a site set up with Ghost. If you don't you can set one up on a [local environmen.](https://ghost.org/docs/install/local/)
+2. **A Ghost site** - It is assumed that you have a site set up with Ghost. If you don't you can set one up on a [local environment.](https://ghost.org/docs/install/local/)
 
 3. **Content API Key** - You can make an integration under your site's `Settings > Integrations`. From there you can find your `Content API key`
 
