chunk was missing

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -30,6 +30,9 @@ To add your site's credentials to Astro, create an `.env` file in the root of yo
 
 ```ini title=".env"
 CONTENT_API_KEY=YOUR_API_KEY
+```
+
+Now, you should be able to use this environment variable in your project.
 
 If you would like to have IntelliSense for your environment variable, you can create a `env.d.ts` file in the `src/` directory and configure `ImportMetaEnv` like this:
 
