--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -122,7 +122,7 @@ export const api = new GhostContentAPI({
 
 ### Displaying a list of posts
 
-The page `src/pages/index.astro` will list post, with a description and link to its own page.
+The page `src/pages/index.astro` will display a list of posts, each with a description and link to its own page.
 
 <FileTree title="Project Structure">
 - src/
