link to more properties

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -149,7 +149,7 @@ const posts = await api.posts
 ---
 ```
 
-Fetching via the content API returns an array of objects with the following properties for each post:
+Fetching via the content API returns an array of objects containing the [properties for each post](https://ghost.org/docs/content-api/#posts) such as:
 - `title` - the title of the post
 - `html` - the HTML rendering of the content of the post
 - `feature_image` - the source URL of the featured image of the post
