code snippet title and highlighting

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -237,7 +237,7 @@ const { post } = Astro.props;
 
 Create the template for each page using the properties of each `post` object.
 
-```astro 
+```astro title="src/pages/post/[slug].astro" ins={24-37}
 ---
 import { api } from '../../lib/api';
 export async function getStaticPaths() {
