remove code comment that made sample wide

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -270,7 +270,7 @@ const { post } = Astro.props;
         <img src={post.feature_image} alt={post.title} />
 
         <h1>{post.title}</h1>
-        <p>{post.reading_time} min read</p> <!-- This property returns the estimated reading time in minutes -->
+        <p>{post.reading_time} min read</p>
 
         <Fragment set:html={post.html} />
     </body>
