changed api.ts to ghost.ts

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -92,12 +92,12 @@ This example will create an index page that lists posts with links to dynamicall
 
 You can fetch your site's data with the Ghost content API package.
 
-First, create an `api.ts` file under a `lib` directory.
+First, create an `ghost.ts` file under a `lib` directory.
 
 <FileTree title="Project Structure">
 - src/
   - lib/
-    - **api.ts**
+    - **ghost.ts**
   - pages/
     - index.astro
 - astro.config.mjs
@@ -106,7 +106,7 @@ First, create an `api.ts` file under a `lib` directory.
 
 Initialize an API instance with the Ghost API using the API key from the Ghost dashboard's Integrations page.
 
-```ts title="src/lib/api.ts"
+```ts title="src/lib/ghost.ts"
 
 import GhostContentAPI from '@tryghost/content-api';
 
@@ -127,7 +127,7 @@ The page `src/pages/index.astro` will display a list of posts, each with a descr
 <FileTree title="Project Structure">
 - src/
  - lib/
-    - api.ts
+    - ghost.ts
   - pages/
     - **index.astro**
 - astro.config.mjs
@@ -138,7 +138,7 @@ Import the API in the Astro frontmatter to use the `posts.browse()` method to ac
 
 ```astro title="src/pages/index.astro"
 ---
-import { api } from '../lib/api';
+import { api } from '../lib/ghost.ts';
 const posts = await api.posts
     .browse({
         limit: 'all',
@@ -193,7 +193,7 @@ The page `src/pages/post/[slug].astro` [dynamically generates a page](/en/core-c
 <FileTree title="Project Structure">
 - src/
  - lib/
-    - api.ts
+    - ghost.ts
   - pages/
     - index.astro
     - post/
@@ -206,7 +206,7 @@ Import the API to access blog posts using `posts.browse()` and return a post as 
 
 ```astro title="src/pages/post/[slug].astro"
 ---
-import { api } from '../../lib/api';
+import { api } from '../../lib/ghost';
 
 export async function getStaticPaths() {
     const posts = await api.posts
@@ -237,7 +237,7 @@ Create the template for each page using the properties of each `post` object.
 
 ```astro title="src/pages/post/[slug].astro" ins={24-37}
 ---
-import { api } from '../../lib/api';
+import { api } from '../../lib/ghost.ts';
 export async function getStaticPaths() {
     const posts = await api.posts
         .browse({
