Fix broken links

--- a/src/pages/zh-cn/guides/client-side-scripts.mdx
+++ b/src/pages/zh-cn/guides/client-side-scripts.mdx
@@ -50,7 +50,7 @@ Astro 默认处理 `<script>` 标签。
 添加 `type="module"` 或除 `src` 之外的任何属性到 `<script>` 标签将禁用 Astro 的默认捆绑行为，将标签视为具有 `is:inline` 指令。
 :::
 
-📚 请参阅我们的[指令参考](/en/reference/directives-reference/#script--style-directives)页面以获取有关 `<script>` 标签上可用指令的更多信息。
+📚 请参阅我们的[指令参考](/zh-CN/reference/directives-reference/#script--style-directives)页面以获取有关 `<script>` 标签上可用指令的更多信息。
 
 ### 脚本加载
 
@@ -60,7 +60,7 @@ Astro 默认处理 `<script>` 标签。
 
 **何时使用**：如果您的脚本位于 `src/`。
 
-Astro 将按照其[脚本捆绑规则](#script-bundling)为您构建、优化并将这些脚本添加到页面中。
+Astro 将按照其[脚本捆绑规则](#脚本捆绑)为您构建、优化并将这些脚本添加到页面中。
 
 ```astro title="src/components/LocalScripts.astro"
 <!-- `src/scripts/local.js` 脚本的相对路径 -->
@@ -162,7 +162,7 @@ Instead, you can use [`addEventListener`](https://developer.mozilla.org/en-US/do
 
 ### 将 frontmatter 变量传递给脚本
 
-在 Astro 组件中，`---` 之间 [frontmatter](/zh-CN/core-concepts/astro-components/#the-component-script) 中的代码在服务器上运行，而不是在浏览器中。要将变量从服务器发送到客户端，我们需要一种方法来存储我们的变量，然后在浏览器中运行 JavaScript 时读取它们。
+在 Astro 组件中，`---` 之间 [frontmatter](/zh-CN/core-concepts/astro-components/#组件脚本) 中的代码在服务器上运行，而不是在浏览器中。要将变量从服务器发送到客户端，我们需要一种方法来存储我们的变量，然后在浏览器中运行 JavaScript 时读取它们。
 
 一种方法是使用 [`data-*` 属性](https://developer.mozilla.org/zh-CN/docs/Learn/HTML/Howto/Use_data_attributes) 在 HTML 中存储变量值输出。 一旦您的 HTML 加载到浏览器中，脚本（包括自定义元素）就可以使用元素的“数据集”属性读取这些属性。
 
