--- a/src/pages/zh-cn/guides/client-side-scripts.mdx
+++ b/src/pages/zh-cn/guides/client-side-scripts.mdx
@@ -4,7 +4,7 @@ description: 如何使用浏览器 JavaScript API 将客户端交互界面添加
 layout: ~/layouts/MainLayout.astro
 ---
 
-你可以[不使用一个 UI 框架](/en/core-concepts/framework-components/)（比如 React，Svelte，Vue），使用标准的 HTML `<script>` 标签为你的 Astro 组件添加交互性。这允许你发送 JavaScript 到浏览器，并且为 Astro 组件添加各种功能。
+你可以[不使用一个 UI 框架](/zh-CN/core-concepts/framework-components/)（比如 React，Svelte，Vue），使用标准的 HTML `<script>` 标签为你的 Astro 组件添加交互性。这允许你发送 JavaScript 到浏览器，并且为 Astro 组件添加各种功能。
 
 ## 在 Astro 中使用 `<script>`
 
@@ -50,7 +50,7 @@ Astro 默认处理 `<script>` 标签。
 添加 `type="module"` 或除 `src` 之外的任何属性到 `<script>` 标签将禁用 Astro 的默认捆绑行为，将标签视为具有 `is:inline` 指令。
 :::
 
-📚 请参阅我们的[指令参考](/zh-CN/reference/directives-reference/#script--style-directives)页面以获取有关 `<script>` 标签上可用指令的更多信息。
+📚 请参阅我们的[指令参考](/zh-CN/reference/directives-reference/#脚本和样式指令)页面以获取有关 `<script>` 标签上可用指令的更多信息。
 
 ### 脚本加载
 
