add dynamic routes

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -50,3 +50,49 @@ export const get: APIRoute = async function get ({params, request}) {
 ...
 ```
 
+## `params` und dynamische Routen
+
+Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne deine Datei mit einem Parameternamen, eingeschlossen in eckige Klammern und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst Du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
+
+```ts title="src/pages/[id].json.ts"
+import type { APIRoute } from 'astro';
+
+const usernames = ["Sarah", "Chris", "Dan"]
+
+export const get: APIRoute = ({ params, request }) => {
+  const id = params.id;
+  return {
+    body: JSON.stringify({
+      name: usernames[id]
+    })
+  }
+};
+
+export function getStaticPaths () {
+  return [ 
+    { params: { id: "0"} },
+    { params: { id: "1"} },
+    { params: { id: "2"} },
+  ]
+}
+```
+
+Dies generiert drei JSON-Endpunkte zum Bereitstellungszeitpunkt: `/api/1.json`, `/api/2.json`, `/api/3.json`. Dynamisches Routing funktioniert genauso wie es bei den Seiten funktioniert, aber da der Endpunkt eine Funktion ist und keine Komponente werden [props](/de/reference/api-reference/#data-passing-with-props) nicht unterstützt.
+
+### `request`
+
+Alle Endpunkte nehmen eine `request`-Eigenschaft entgegen, aber im statischen Modus hast du nur Zugriff auf `request.url`. Diese enthält die komplette URL des aktuellen Endpunkts und funktioniert genauso wie [Astro.request.url](/de/reference/api-reference/#astrorequest) bei Seiten.
+
+```ts title="src/pages/request-path.json.ts"
+import type { APIRoute } from 'astro';
+
+export const get: APIRoute = ({ params, request }) => {
+  return {
+    body: JSON.stringify({
+      path: new URL(request.url).pathname
+    })
+  };
+}
+```
+
+## Server Endpunkte (API-Routen)
