--- a/src/pages/en/reference/error-reference.mdx
+++ b/src/pages/en/reference/error-reference.mdx
@@ -47,6 +47,7 @@ The following reference is a complete list of the errors you may encounter while
 - [**MarkdownFrontmatterParseError**](/en/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
 - [**MarkdownContentSchemaValidationError**](/en/reference/errors/markdown-content-schema-validation-error/) (E06002)<br/>Content collection frontmatter invalid.
 - [**InvalidFrontmatterInjectionError**](/en/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
+- [**MdxIntegrationMissingError**](/en/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
 - [**ConfigNotFound**](/en/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
 - [**ConfigLegacyKey**](/en/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
 ## CLI Errors
