--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -96,3 +96,82 @@ export const get: APIRoute = ({ params, request }) => {
 ```
 
 ## Server Endpunkte (API-Routen)
+Alles was bei den Endpunkten für statische Dateien beschrieben wurde, kann auch im SSR-Modus verwendet werden: Dateien können eine `get`-Funktion exportieren, die ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) mit ähnlichen Eigenschaften wie die globale `Astro`-Variable entgegennimmt.
+
+Aber wenn der `server`-Modus konfiguriert ist werden die Daten zusammengestellt, wenn sie angefragt werden, anders als im `static`-Modus. Das ermöglicht Zugriff ein paar neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind. Diese erlauben es dir, API-Routen zu erstellen, die auf Requests warten und Code in einer sicheren Server-Umgebung ausführen, wenn der Server läuft.
+
+:::note
+Stell sicher, dass Du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project) bevor du diese Beispiele ausprobierst.
+:::
+
+Server-Endpunkte könenn auf `params` zugreifen ohne `getStaticPaths` zu exportieren und sie können ein [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response)-Objekt zurückgeben, was es ermöglicht, Status codes und Header zu setzen.
+
+
+```js title="src/pages/[id].json.js"
+import { getProduct } from '../db';
+
+export async function get({ params }) {
+  const id = params.id;
+  const product = await getProduct(id);
+
+  if (!product) {
+    return new Response(null, {
+      status: 404,
+      statusText: 'Not found'
+    });
+  }
+
+  return new Response(JSON.stringify(product), {
+    status: 200,
+    headers: {
+      "Content-Type": "application/json"
+    }
+  });
+}
+```
+
+Das wird jeden Request beantworten, der die dynamische Route matcht. Wenn wir zum Beispiel zu `/helmet.json` navigieren, wird `params.id` den Wert `helmet` haben. Wenn in der Produktdatenbank `helmet` existiert, wird der der Endpunkt ein `Response`-Objekt erzeugen um mit JSON und einem erfolgreichen [HTTP status code](https://developer.mozilla.org/en-US/docs/Web/API/Response/status) antworten. Anderenfalls wird ein `Response`-Objekt genutzt, um mit einem `404` zu antworten.
+
+### HTTP-Methoden
+
+Zusätzlich zu der `get`-Funktion kannst Du Funktionen mit den Namen aller möglichenn [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn ein Request ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
+
+Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Wenn ein Request ohne passende Methode ankommt, wird man zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) weitergeleitet.
+
+:::note
+Da `delete` in JavaScript ein reserviertes Wort ist, exportiere eine `del`-Funktion um die `delete`-Methode abzubilden.
+:::
+
+```ts title="src/pages/methods.json.ts"
+export const get: APIRoute = ({ params, request }) => {
+  return {
+    body: JSON.stringify({
+      message: "Das war ein GET!"
+    })
+  }
+};
+
+export const post: APIRoute = ({ request }) => {
+  return {
+    body: JSON.stringify({
+      message: "Das war ein POST!"
+    })
+  }
+}
+
+export const del: APIRoute = ({ request }) => {
+  return {
+    body: JSON.stringify({
+      message: "Das war ein DELETE!"
+    })
+  }
+}
+
+export const all: APIRoute = ({ request }) => {
+  return {
+    body: JSON.stringify({
+      message: `Das war ein ${request.method}!`
+    })
+  }
+}
+```
