chore: fix recommendations and typo

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -52,7 +52,7 @@ export const get: APIRoute = async function get ({params, request}) {
 
 ## `params` und dynamische Routen
 
-Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne deine Datei mit einem Parameternamen, eingeschlossen in eckige Klammern und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst Du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
+Endpunkte unterstützen das gleiche [dynamische Routing](/de/core-concepts/routing/#dynamic-routes) wie Seiten. Benenne deine Datei mit einem Parameternamen, eingeschlossen in eckige Klammern und exportiere eine Funktion mit dem Namem [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths). Dann kannst du auf den Parameter mittels der `params`-Eigenschaft zugreifen, die die Funktion des Endpunkts entgegennimmt:
 
 ```ts title="src/pages/[id].json.ts"
 import type { APIRoute } from 'astro';
@@ -98,10 +98,10 @@ export const get: APIRoute = ({ params, request }) => {
 ## Server Endpunkte (API-Routen)
 Alles was bei den Endpunkten für statische Dateien beschrieben wurde, kann auch im SSR-Modus verwendet werden: Dateien können eine `get`-Funktion exportieren, die ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) mit ähnlichen Eigenschaften wie die globale `Astro`-Variable entgegennimmt.
 
-Aber wenn der `server`-Modus konfiguriert ist werden die Daten zusammengestellt, wenn sie angefragt werden, anders als im `static`-Modus. Das ermöglicht Zugriff ein paar neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind. Diese erlauben es dir, API-Routen zu erstellen, die auf Requests warten und Code in einer sicheren Server-Umgebung ausführen, wenn der Server läuft.
+Aber wenn der `server`-Modus konfiguriert ist werden die Daten zusammengestellt, wenn sie angefragt werden, anders als im `static`-Modus. Das ermöglicht Zugriff ein paar neue Funktionen, die zum Erstellungszeitpunkt nicht verfügbar sind. Diese erlauben es dir, API-Routen zu erstellen, die auf Anfragen warten und Code in einer sicheren Server-Umgebung ausführen, wenn der Server läuft.
 
 :::note
-Stell sicher, dass Du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project) bevor du diese Beispiele ausprobierst.
+Stell sicher, dass du [SSR aktivierst](/de/guides/server-side-rendering/#enabling-ssr-in-your-project) bevor du diese Beispiele ausprobierst.
 :::
 
 Server-Endpunkte könenn auf `params` zugreifen ohne `getStaticPaths` zu exportieren und sie können ein [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response)-Objekt zurückgeben, was es ermöglicht, Status codes und Header zu setzen.
@@ -134,9 +134,9 @@ Das wird jede Anfrage beantworten, der die dynamische Route matcht. Wenn wir zum
 
 ### HTTP-Methoden
 
-Zusätzlich zu der `get`-Funktion kannst Du Funktionen mit den Namen aller möglichenn [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn eine Anfrage ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
+Zusätzlich zu der `get`-Funktion kannst du Funktionen mit den Namen aller möglichen [HTTP-Methoden](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) exportieren. Wenn eine Anfrage ankommt, wird Astro die Methode prüfen und die entsprechende Funktion aufrufen.
 
-Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Wenn ein Request ohne passende Methode ankommt, wird man zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) weitergeleitet.
+Du kannst auch eine Funktion `all` exportieren, die alle Methoden abdeckt, die keine eigene Funktion haben. Wenn eine Anfrage ohne passende Methode ankommt, wird man zur [404-Seite](/de/core-concepts/astro-pages/#custom-404-error-page) weitergeleitet.
 
 :::note
 Da `delete` in JavaScript ein reserviertes Wort ist, exportiere eine `del`-Funktion um die `delete`-Methode abzubilden.
