Apply suggestions from code review
Co-authored-by: Luca M. Schmidt <business.lucaschmidt@icloud.com>

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -27,7 +27,7 @@ export async function get({params, request}) {
 }
 ```
 
-Das Rückgabe-Objekt kann auch eine `encoding`-Eigenschaft enthalten. Diese kann jegliches gültiges [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) sein, welches von Node.js' `fs.writeFile`-Methode unterstützt wird. Um zum Beispiel ein binäres PNG-Bild zu erzeugen:
+Das Rückgabe-Objekt kann auch eine `encoding`-Eigenschaft enthalten. Es kann jede gültige [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) sein, welches von der Node.js' `fs.writeFile`-Methode unterstützt wird. Um zum Beispiel ein binäres PNG-Bild zu erzeugen:
 
 
 ```ts title="src/pages/astro-logo.png.ts" {6}
@@ -81,7 +81,7 @@ Dies generiert drei JSON-Endpunkte zum Bereitstellungszeitpunkt: `/api/1.json`, 
 
 ### `request`
 
-Alle Endpunkte nehmen eine `request`-Eigenschaft entgegen, aber im statischen Modus hast du nur Zugriff auf `request.url`. Diese enthält die komplette URL des aktuellen Endpunkts und funktioniert genauso wie [Astro.request.url](/de/reference/api-reference/#astrorequest) bei Seiten.
+Alle Endpunkte nehmen eine `request`-Eigenschaft entgegen, allerdings hast du im statischen Modus nur Zugriff auf `request.url`. Diese enthält die komplette URL des aktuellen Endpunkts und funktioniert genauso wie [Astro.request.url](/de/reference/api-reference/#astrorequest) bei Seiten.
 
 ```ts title="src/pages/request-path.json.ts"
 import type { APIRoute } from 'astro';
