chore: update with review recommendations

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -4,7 +4,7 @@ title: Endpunkte
 description: Erfahre wie du Endpunkte erstellen kannst, die jegliche Form von Daten bereitstellen
 ---
 
-Astro lässt Dich unterschiedliche projektspezifische Endpunkte erstellen, die jegliche Form von Daten bereitstellen können. Du kannst sie verwenden um Bilder zu generieren, ein RSS-Dokument bereitzustellen oder die als API-Route verwenden um eine komplette API für Deine Seite bereitzustellen.
+Astro lässt Dich unterschiedliche projektspezifische Endpunkte erstellen, die jegliche Form von Daten bereitstellen können. Du kannst sie verwenden um Bilder zu generieren, ein RSS-Dokument bereitzustellen oder sie als API-Route verwenden um eine komplette API für Deine Seite bereitzustellen.
 
 In statisch generierten Seiten werden die projektspezifischen Endpunkte zum Erstellungszeitpunkt abgerufen. Wenn du den [SSR](/de/guides/server-side-rendering/)-Modus verwendest, verhalten sich die projektspezifischen Endpunkte wie "echte" API-Endpunkte, die bei jedem Request ausgeführt werden. Statische und SSR-Endpunkte werden auf ähnliche Weise definiert, aber SSR-Endpunkte bieten mehr Optionen.
 
