chore: review changes

--- a/src/pages/de/core-concepts/endpoints.mdx
+++ b/src/pages/de/core-concepts/endpoints.mdx
@@ -12,7 +12,7 @@ In statisch generierten Seiten werden die projektspezifischen Endpunkte zum Erst
 
 Um einen Endpunkt zu erstellen, füge eine `.js` oder `.ts`-Datei dem `/pages`-Verzeichnis hinzu. Die Erweiterung `.js` oder `.ts` wird während des Erstellungsprozesses entfernt, so dass der Dateiname die Dateiendung der Daten, die man erzeugen möchte, enthalten sollte. So erzeugt `src/pages/data.json.ts` zum Beispiel den Endpunkt `/data.json`.
 
-Endpunkte exportieren eine `get`-Funktion (optional auch mit `async` Auszeichnung), welche ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt. Die Inhalte sind ähnlich zu globalen `Astro`-Variable. Die Funktion gibt ein Dokument mit `body`-Objekt zurück, welches Astro zum Erstellungszeitpunkt aufruft. Die Inhalte des Dokuments werden dann zur Erstellung der Datei genutzt.
+Endpunkte exportieren eine `get`-Funktion (optional auch `async`), welche ein [Context-Objekt](/en/reference/api-reference/#endpoint-context) als Parameter übergeben bekommt. Die Inhalte sind ähnlich zur globalen `Astro`-Variable. Die Funktion gibt ein Dokument mit `body`-Objekt zurück, welches Astro zum Erstellungszeitpunkt aufruft. Die Inhalte des Dokuments werden dann zur Erstellung der Datei genutzt.
 
 ```ts
 // Beispiel: src/pages/builtwith.json.ts
