[getting started] emphasize what's new!

--- a/src/pages/en/getting-started.mdx
+++ b/src/pages/en/getting-started.mdx
@@ -101,7 +101,7 @@ Join us in the [Astro Discord](https://astro.build/chat/) to share with and get 
 💬 Share what you've been working on in our `#showcase` channel!
 
 
-## Learn More
+## What's New?
 
 [Astro Blog](https://astro.build/blog/)
 
