show only happy path for create new project!

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -35,40 +35,32 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 ## Convert your Project
 
-### Get Started with Astro
+### Create a new Astro project
 
-- Option 1: **Create a new Astro project** 
+Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
 
-  Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
-  
-  
-  You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
 
-    <PackageManagerTabs>
-      <Fragment slot="npm">
-      ```shell
-      npm create astro -- --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-      <Fragment slot="pnpm">
-      ```shell
-      pnpm create astro --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-      <Fragment slot="yarn">
-      ```shell
-      yarn create astro --template <github-username>/<github-repo>
-      ```
-      </Fragment>
-    </PackageManagerTabs>
-  
-  Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
+You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
 
-- Option 2: **Update your existing Next project dependencies**
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template <github-username>/<github-repo>
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
-  Remove any Next or React-related dependencies in `package.json` and follow all the steps to [install Astro manually](/en/install/manual/) in your existing repository. (You may wish to do this on a different branch.) 
-  
-  Make sure you have [these project files](/en/install/manual/#7-next-steps) and a working home page before continuing. 
+Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
 Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
